(progress checkpoint of 10th anniv. version)

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -13,6 +13,7 @@
         "removeComments": true,
         "noLib": false,
         "outDir": "../lib/LLEAG10th/",
+        "outFile": "../lib/LikeEffectGenerator10th.js",
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true
     },
