--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/WL-Amigo/LikeLikeEffectGenerator/issues"
   },
-  "homepage": "https://github.com/WL-Amigo/LikeLikeEffectGenerator#readme"
+  "homepage": "https://github.com/WL-Amigo/LikeLikeEffectGenerator#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-webserver": "^0.9.1"
+  }
 }
